syntax = "proto3";
package model.generation;

message GemModel {
    uint64 id = 6952;
    string design_name = 6953;

    string name = 1;
    repeated PackageModel packages = 2;
}

message PackageModel {
    uint64 id = 6952;
    string design_name = 6953;
    uint64 gem_model_id = 6954;

    string name = 1;
    repeated ServiceModel services = 2;
    string ruby_namespace = 101;
}

message ServiceModel {
    uint64 id = 6952;
    string design_name = 6953;
    uint64 package_model_id = 6954;

    string name = 1;
    repeated RpcModel rpcs = 2;
}

message RpcModel {
    uint64 id = 6952;
    string design_name = 6953;
    uint64 service_model_id = 6954;

    string name = 1;

    MessageModel input = 2;
    MessageModel output = 3;

    bool generate_implicit_headers = 4;
    bool generate_explicit_headers = 5;

    string arity = 6;
}

message MessageModel {
    uint64 id = 6952;
    string design_name = 6953;
    uint64 rpc_model_id = 6954;

    string name = 1;

    repeated FieldModel fields = 7;
}

message FieldModel {
    uint64 id = 6952;
    string design_name = 6953;
    uint64 message_model_id = 6954;

    string name = 1;
    uint32 number = 2;
    string type_name = 3;
}
